// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertSuccess deson't alert if has errors 1`] = `undefined`;

exports[`AlertSuccess dismiss alert 1`] = `undefined`;

exports[`AlertSuccess render alert if successful 1`] = `
<div role="alert" class="alert alert-success alert-dismissible">
    <button type="button" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
    <div>Custom message</div>
</div>
`;

exports[`AlertSuccess render alert with slot 1`] = `
<div role="alert" class="alert alert-success alert-dismissible">
    <button type="button" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
    <div class="custom">Custom message</div>
</div>
`;
